# vDMC_datamigration_library

./: .env.example  .gitignore  0_bulk_delete_all.py  0_session_id.py  Documentation.md  README.md  config.yaml  credentials.json  methods.py  pyproject.toml
docs/vdmc_salesforce_migration/: credentials.md  index.md
docs/vdmc_salesforce_migration/api/: auth.md  index.md  uploader.md
docs/vdmc_salesforce_migration/utils/: cleaning.md  config_loader.md  file_io.md  index.md  logging.md  soql.md
html/vdmc_salesforce_migration/: credentials.html  index.html
html/vdmc_salesforce_migration/api/: auth.html  index.html  uploader.html
html/vdmc_salesforce_migration/utils/: cleaning.html  config_loader.html  file_io.html  index.html  logging.html  soql.html
mappings/: accounts.json
scripts/: 0_bulk_delete_all.py  bulk_delete_all_revcloud.py  example_bulk_api.py  example_order_activation.py  example_rest_api.py  get_session_id.py  test.py
vdmc_salesforce_migration/: __init__.py  credentials.py  methods.py
vdmc_salesforce_migration/api/: auth.py  uploader.py
vdmc_salesforce_migration/utils/: cleaning.py  config_loader.py  file_io.py  logging.py  soql.py
